--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = "Joy Chrissetyo - Software Engineer";
-const pageDescription = "Master's student in EECS specializing in Vision-Language Models and Robotics.";
+const pageTitle = "jychpr's Glass Mirror";
+const pageDescription = "jychpr's technical background";
 const pageImage = "/glass-mirror/images/pro-profile.jpg"; 
 ---
 
@@ -20,21 +20,27 @@ const pageImage = "/glass-mirror/images/pro-profile.jpg";
             </div>
 
             <div class="row">
+                <span class="label">Chinese Name</span>
+                <span class="arrow">→</span>
+                <span class="value name-highlight">王智豪</span>
+            </div>
+
+            <div class="row">
                 <span class="label">Employment</span>
                 <span class="arrow">→</span>
-                <span class="value">Master's Student in EECS @ NYCU</span>
+                <span class="value">Master Student majoring EECS in NYCU</span>
             </div>
 
             <div class="row">
                 <span class="label">From</span>
                 <span class="arrow">→</span>
-                <span class="value">Yogyakarta, Indonesia 🇮🇩</span>
+                <span class="value">Yogyakarta, Indonesia</span>
             </div>
 
             <div class="row">
                 <span class="label">Location</span>
                 <span class="arrow">→</span>
-                <span class="value">Hsinchu, Taiwan 🇹🇼</span>
+                <span class="value">Hsinchu, Taiwan</span>
             </div>
 
             <div class="row">
@@ -44,10 +50,16 @@ const pageImage = "/glass-mirror/images/pro-profile.jpg";
             </div>
 
             <div class="row">
+                <span class="label">Research Topic</span>
+                <span class="arrow">→</span>
+                <span class="value">Detection 2D-VLM for Robotic Assembly</span>
+            </div>
+
+            <div class="row">
                 <span class="label">Reach Out</span>
                 <span class="arrow">→</span>
                 <span class="value">
-                    <a href="mailto:joy.chr.pr@gmail.com" class="link-highlight">Say Hi to me! 👋</a>
+                    <a href="mailto:joy.chr.pr@gmail.com" class="link-highlight">Say Hi to me!</a>
                 </span>
             </div>
 
@@ -58,7 +70,7 @@ const pageImage = "/glass-mirror/images/pro-profile.jpg";
                 <span class="arrow">→</span>
                 <span class="value social-links">
                     <a href="https://github.com/jychpr" target="_blank">Github</a> / 
-                    <a href="https://www.kaggle.com/" target="_blank">Kaggle</a>
+                    <a href="https://www.kaggle.com/jychpr" target="_blank">Kaggle</a>
                 </span>
             </div>
 
