polishing home page both side refine

--- a/src/pages/fun.astro
+++ b/src/pages/fun.astro
@@ -24,9 +24,14 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
                 <span class="arrow">→</span>
                 <span class="value name-highlight">Listening to music, playing games, gyms, wathcing movies (and series formerly), amateur photography</span>
             </div>
+        </div>
+    </section>
 
-            <div class="divider"></div>
+    <section class="intro-container">
+        
+        <h2 class="section-title">Listening Hobby</h2>
 
+        <div class="spec-sheet">
             <div class="row">
                 <span class="label">Favorite music genres</span>
                 <span class="arrow">→</span>
@@ -46,8 +51,12 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
                     <a href="https://open.spotify.com/user/z2iwgdtdoj4yvehpb3ik0b44u?si=f6yqOFM2QIyXiQMHonAUoA" target="_blank">Spotify</a>
                 </span>
             </div>            
+        </div>
+    </section>
 
-            <div class="divider"></div>
+    <section class="intro-container">
+        
+        <h2 class="section-title">Photography Hobby</h2>
 
             <div class="row">
                 <span class="label">Photography target or objects?</span>
@@ -68,8 +77,12 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
                     <a href="https://www.instagram.com/wzhsnapshots" target="_blank">Instagram</a>
                 </span>
             </div>     
+        </div>
+    </section>
 
-            <div class="divider"></div>
+    <section class="intro-container">
+        
+        <h2 class="section-title">Gaming Hobby</h2>
 
             <div class="row">
                 <span class="label">Gamer status</span>
@@ -96,8 +109,6 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
                 <span class="arrow">→</span>
                 <span class="value">Youtube and Twitch (former plarform)</span>
             </div>
-
-            <div class="divider"></div>
         </div>
 
         <div class="cta-container">
