--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,13 +16,7 @@ const pageImage = "/glass-mirror/images/pro-profile.jpg";
             <div class="row">
                 <span class="label">Name</span>
                 <span class="arrow">→</span>
-                <span class="value name-highlight">Joy Chrissetyo Prajogo</span>
-            </div>
-
-            <div class="row">
-                <span class="label">Chinese Name</span>
-                <span class="arrow">→</span>
-                <span class="value name-highlight">王智豪</span>
+                <span class="value name-highlight">Joy Chrissetyo Prajogo | 王智豪</span>
             </div>
 
             <div class="row">
